config/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-vault-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vault.local.gd
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.local.gd
    secretName: tls-secret
